Finished the wells on the event info page

--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -463,3 +463,19 @@ span.brackets {
 	padding-right: 0;
 	padding-left: 0;
 }
+
+.no-padding-right {
+	padding-right: 0;
+}
+
+.no-padding-left {
+	padding-left: 0;
+}
+
+.border-none {
+	border: none;
+	border-radius: initial;
+	-webkit-box-shadow: initial;
+	-moz-box-shadow: initial;
+	box-shadow: initial;
+}
