--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -57,31 +57,34 @@
 			margin-left: 20px;
 		}
 	}
-	
+
 	.well {
-		border: none;
-		border-radius: 0;
+		position: relative;
+		margin-top: 40px;
 	}
 
 	.well:after {
-					
+		content: "";
+		width: 0;
+		height: 0; 
+		border-left: 25px solid transparent;
+		border-right: 25px solid transparent;
+		border-bottom: 25px solid #F5F5F5;
+		position: absolute;
+		top: -25px;
+		right: 13%;
+	}
+
+	.middle-or {
+		display: block;
+		margin: 10px 0;
+		@include breakpoint( $break-small ) {
+			margin: 5px 0 0 0;
+		}
 	}
 
 	// Event Info Page Styles
 	.event-info-course-row {
-
-		.btn-success {
-			float: right;
-			width: 100%;
-		}
-
-		.event-info-or {
-			display: block;
-			margin: 10px 0;
-			@include breakpoint( $break-small ) {
-				margin: 5px 0 0 0;
-			}
-		}
 	}
 }
 
@@ -90,6 +93,9 @@
 	display: table;
 	& > * {
 		display: table-cell;
+	}
+	button {
+		width: 100%;
 	}
 }
 
