nearly done with styles

--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -479,3 +479,11 @@ span.brackets {
 	-moz-box-shadow: initial;
 	box-shadow: initial;
 }
+
+.float-right {
+	float: right;
+}
+
+.float-left {
+	float: left;
+}
