--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -82,9 +82,23 @@
 			margin: 5px 0 0 0;
 		}
 	}
+	
+	.no-padding-left {
+		padding: 0 15px;
+		@include breakpoint( $break-small ) {
+			padding: 0 15px 0 0;
+		}
+	}
 
-	// Event Info Page Styles
-	.event-info-course-row {
+	.no-padding-right {
+		padding: 0 15px;
+		@include breakpoint( $break-small ) {
+			padding: 0 0 0 15px;
+		}
+	}
+
+	textarea {
+		resize: none;
 	}
 }
 
@@ -102,6 +116,7 @@
 /** Split Modal Styles **/
 .split-modal {
 	position: relative;
+	
 	.or {
 		position: absolute;
 		left: 50%;
