--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -121,16 +121,26 @@
 		<div class="form-group">
 			<label class="required">Multiple laps?</label>
 			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-			<div class="form-inline">
-				<label class="switchery-label">
-					<span>No</span>
-					<input type="checkbox" data-toggle="switchery" data-size="small" value="true" v-model="eventData.event.laps"/>
-					<span>Yes</span>
-				</label>
-				<label v-if="eventData.event.laps">
-					How many laps?
-					<input type="text" class="form-control" v-model="eventData.event.lapCount" v-mask="{ alias: 'integer' }" >
-				</label>
+			<div class="row">
+				<div class="col-xs-4">
+					
+					<div class="form-inline">
+						<label class="switchery-label">
+							<span>No</span>
+							<input type="checkbox" data-toggle="switchery" data-size="small" value="true" v-model="eventData.event.laps"/>
+							<span>Yes</span>
+						</label>
+						
+					</div>
+				</div>
+				<div class="col-xs-8">
+					<div class="form-inline float-left">
+						<label v-if="eventData.event.laps">
+							How many laps?
+							<input type="text" class="form-control" v-model="eventData.event.lapCount" v-mask="{ alias: 'integer' }" >
+						</label>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="form-group">
@@ -366,10 +376,10 @@
 	</aside>
 	<article class="col-xs-12 col-sm-8">
 		<div class="row">
-			<div class="col-xs-7">
+			<div class="col-xs-12 col-sm-5">
 				<h5><strong>Your Participants:</strong></h5>
 			</div>
-			<div class="col-xs-5">
+			<div class="col-xs-12 col-sm-7">
 				<div class="input-group">
 					<input type="text" class="form-control" v-model="filter" placeholder="Filter:"/>
 					<span class="input-group-btn"><span class="btn btn-success"><i class="glyphicon glyphicon-search"></i>Find Participant</span></span>
@@ -394,8 +404,8 @@
 						<td>{{ vm.row.dob }}</td>
 						<td>{{ vm.row.city }}, {{ vm.row.state }}</td>
 						<td>{{ vm.row.bibnumber }}</td>
-						<td><a data-toggle="modal" data-target="#js-participant-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
-						<td><a v-on:click="vm.$emit('remove')"><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+						<td><a href="#" data-toggle="modal" data-target="#js-participant-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
+						<td><a href="#" v-on:click="vm.$emit('remove')"><i class="glyphicon glyphicon-remove-circle"></i></a></td>
 					</template>
 				</data-tables>
 			</div>
@@ -578,8 +588,7 @@
 					<td>NaN</td>
 					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td></tr>
 				<tr>
-					<th>Your Splits</th>
-					<td><google-map :markers="eventData.splits"></google-map></td>
+					<th colspan="2">Your Splits<google-map :markers="eventData.splits"></google-map></th>
 					<td><span class="brackets"><router-link to="/splits">Edit</router-link></span></td>
 				</tr>
 				<tr>
