Plugged app into new route.)

--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-.stage.index { // TODO: Increase Specificity
+.events.app { // TODO: Increase Specificity
 
 	nav.navbar {
 		margin-bottom: 0;
