--- a/app/views/event_staging/events/app.html.erb
+++ b/app/views/event_staging/events/app.html.erb
@@ -473,14 +473,14 @@
 						<div class="row">
 							<div class="form-group col-xs-6">
 								<label class="required">Country</label>
-								<select id="js-participants-contry" class="form-control" v-model="model.countryID" v-on:change="model.state = ''">
+								<select id="js-participants-contry" class="form-control" v-model="model.countryID" v-on:change="model.state = ( regions[ model.countryID ].split('|')[0] || 'N/A' )">
 									<option v-for="(country,index) in countries" :value="index + 1">{{ country }}</option>
 								</select>
 							</div>
 							<div class="form-group col-xs-6">
 								<label class="required">State / Region</label>
-								<select id="js-participants-state" class="form-control" v-model="model.state" :disabled="!model.countryID || !regions[ model.countryID ]">
-									<option v-for="region in (regions[ model.countryID ] || '').split('|')" :value="region">{{ region }}</option>
+								<select id="js-participants-state" class="form-control" v-model="model.state" :disabled="!model.countryID">
+									<option v-for="( region, index ) in ( regions[ model.countryID ] || 'N/A' ).split('|')" :value="region" >{{ region }}</option>
 								</select>
 							</div>
 						</div>
